<resources>
    <string name="app_name">Museum Guide</string>
    <string name="account_already_exists">Account already exists</string>
    <string name="account_not_found">No accounts match that information</string>
    <string name="action_done">Done</string>
    <string name="action_logout">Log out</string>
    <string name="action_more">More</string>
    <string name="back">Back</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="cancelled">Cancelled</string>
    <string name="closed">Closed</string>
    <string name="closing_time">Closing time:</string>
    <string name="delete">Delete</string>
    <string name="description"><b>Description: </b></string>
    <string name="edit">Edit</string>
    <string name="email_error_message">Please enter a valid email.</string>
    <string name="error_message">An error has occurred. Please try again</string>
    <string name="error_message_downloading_image">An error occurred during downloading image</string>
    <string name="error_message_saving_museum">An error has occurred during saving museum</string>
    <string name="error_message_saving_object">An error has occurred during saving object</string>
    <string name="error_message_saving_room">An error has occurred during saving room</string>
    <string name="error_message_updating_museum">An error has occurred during updating museum</string>
    <string name="error_message_updating_object">An error has occurred during updating object</string>
    <string name="error_message_updating_room">An error has occurred during updating room</string>
    <string name="error_message_uploading_image">An error occurred during uploading image</string>
    <string name="find_your_account">Find your account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_message">Forgot your password? It happens.\nWe\'ll send you a link to reset it.</string>
    <string name="friday">Friday</string>
    <string name="friday_bold"><b>Friday:</b></string>
    <string name="from">From</string>
    <string name="gallery">Gallery</string>
    <string name="helper_text">Use at least six characters.</string>
    <string name="hint_object_description">Add object description</string>
    <string name="play">Play</string>
    <string name="hint_email">Email</string>
    <string name="hint_museum_location">Add museum location</string>
    <string name="hint_radius">Add radius</string>
    <string name="hint_museum_name">Add museum name</string>
    <string name="hint_object_name">Add object name</string>
    <string name="hint_password">Password</string>
    <string name="time_error_message">The closing time precedes the opening time</string>
    <string name="hint_room_name">Add room name</string>
    <string name="location_empty_error_message">A location is required.</string>
    <string name="log_in">Log In</string>
    <string name="log_in_message">Already have an account? Log in.</string>
    <string name="log_in_error_message">This email and password combination is incorrect. Please try again or sign up</string>
    <string name="gps_error_title">GPS is not enabled.</string>
    <string name="gps_error_message">Do you want to turn on GPS?</string>
    <string name="monday">Monday</string>
    <string name="monday_bold"><b>Monday:</b></string>
    <string name="museum_open">Museum open</string>
    <string name="museum_image">Museum image</string>
    <string name="museum_name"><b>Museum name:</b></string>
    <string name="museum_successfully_updated">Museum successfully updated</string>
    <string name="museum_successfully_saved">Museum successfully saved</string>
    <string name="name_empty_error_message">A name is required.</string>
    <string name="no">No</string>
    <string name="no_connection">No connection</string>
    <string name="no_description_available">No description available</string>
    <string name="no_gps">GPS is not enabled</string>
    <string name="object_list">Object list</string>
    <string name="object_image">Object image</string>
    <string name="object_successfully_saved">Object successfully saved</string>
    <string name="opening_time">Opening time:</string>
    <string name="or">OR</string>
    <string name="room_successfully_saved">Room successfully saved</string>
    <string name="room_successfully_updated">Room successfully updated</string>
    <string name="place_not_found">We have not found this place. Try another.</string>
    <string name="room_list">Room list</string>
    <string name="saturday">Saturday</string>
    <string name="saturday_bold"><b>Saturday:</b></string>
    <string name="select_days_to_add_hours">Select days to add hours</string>
    <string name="sent_email_message">We just sent you a password reset email</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_message">Don\'t have an account? Sign up.</string>
    <string name="speak">Speak</string>
    <string name="speak_message">Hello, How can I help you?</string>
    <string name="sunday">Sunday</string>
    <string name="sunday_bold"><b>Sunday:</b></string>
    <string name="tap_here_to_speak">Tap here to speak</string>
    <string name="text_helper_password">Use at least six characters.</string>
    <string name="title_activity_maps">Map</string>
    <string name="to">To</string>
    <string name="thursday">Thursday</string>
    <string name="thursday_bold"><b>Thursday</b></string>
    <string name="tuesday">Tuesday</string>
    <string name="tuesday_bold"><b>Tuesday:</b></string>
    <string name="upload_from">Upload from</string>
    <string name="wednesday">Wednesday</string>
    <string name="wednesday_bold"><b>Wednesday:</b></string>
    <string name="yes">Yes</string>
</resources>