<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more"
        android:title="@string/action_more"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/action_map"
                android:icon="@drawable/ic_map"
                android:title="@string/title_activity_maps"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_logout"
                android:title="@string/action_logout"
                android:icon="@drawable/ic_logout"
                app:showAsAction="ifRoom" />

        </menu>

    </item>

</menu>